# src/api/components/auth/network.js
@@ -6,6 +6,7 @@ const Controller = require('./index');
 const router = express.Router();
 
 router.post('/login', login);
+router.post('/register', register);
 
 function login (req, res, next) {
   const { email, password } = req.body;
@@ -14,6 +15,14 @@ function login (req, res, next) {
       response.success(req, res, token, 200);
     })
     .catch(next);
+}
+
+function register (req, res, next) {
+  Controller.register(req.body)
+    .then(newUser => {
+      response.success(req, res, newUser, 201);
+    })
+    .catch((next));
 }
 
 module.exports = router;
